--- a/WpfCursus/ButtonGebruikWindow.xaml
+++ b/WpfCursus/ButtonGebruikWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="WpfCursus.MainWindow"
+﻿<Window x:Class="WpfCursus.ButtonGebruikWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
