--- a/WpfCursus/App.xaml
+++ b/WpfCursus/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WpfCursus"
-             StartupUri="MainWindow.xaml">
+             StartupUri="ButtonGebruikWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
